tests/rgs/semantic_errors/wrong_origin_condition.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    CONDITION is_tired MYSELF.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT IF is_tired ENVIRONMENT:
                DO run.
